# mi_edificio

./: .env  DOCUMENTACION_GASTOS.md  GUIA_RAPIDA_PROPIETARIOS.md  INSTRUCTIVO_PROPIETARIOS.md  README.md  main.py  pyproject.toml  requirements.txt
src/: auth_dependencies.py  settings.py
src/models/: __init__.py  apartment.py  database.py  payment.py  user.py
src/routes/: __init__.py  admin.py  admin_pagos.py  auth.py  propietario.py
src/utils/: generador_pagos.py  pago_automatico.py  propietario_utils.py
templates/: base.html  establecer_password.html  login.html  password_establecido_exitoso.html
templates/admin/: apartamentos.html  dashboard.html  finanzas.html  gastos_comunidad.html  gastos_reportes.html  pagos.html  pagos_configuracion.html  pagos_generar_automatico.html  pagos_generar_cargos.html  pagos_procesar.html  pagos_reportes.html  pagos_status_procesamiento.html  presupuesto_detalle.html  presupuestos.html  propietarios.html  registros_financieros.html  tasas_interes.html
templates/propietario/: ayuda.html  cartera_morosa.html  dashboard.html  detalle_apartamento.html  estado_cuenta.html
