[project]
name = "edificio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.14",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pyjwt>=2.10.1",
    "pymupdf>=1.26.3",
    "python-dotenv>=1.1.1",
    "sqlmodel>=0.0.24",
    "supabase>=2.16.0",
]
